# dcase_base

./: .dockerignore  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  DCASE_ANALYSIS.md  DOCUMENTATION_INDEX.md  LICENSE  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REALTIME_SED_README.md  analyze_experiment_results.py  debug_mixstyle_p1.py  main.py  mypy.ini  pyproject.toml  realtime_sed.py  run_realtime_sed.sh  test_bias_initialization.py  test_fixed_mixstyle.py  test_mixstyle_phase1.py  test_mixstyle_phase2.py  test_teacher_eval_mode.py
.devcontainer/: Dockerfile  devcontainer.json  post_create_command.sh
.github/: copilot-instructions.md
.kiro/: auto_impl.sh
.kiro/specs/devcontainer-safe-impl/: IMPLEMENTATION_COMPLETE.md  requirements.md  research.md  tasks.md
.kiro/steering/: dcase2024-implementation-ja.md  product.md  structure.md  tech.md
DESED_task/: test_attention_types.py
DESED_task/dcase2024_task4_baseline/: CLAUDE.md  DEVCONTAINER_GUIDE.md  README.md  VISUALIZATION_README.md  check_enviroment.sh  check_maestro_split.py  chk.py  count_dataset.py  create_fixed_dataset.py  dataset_count_detailed.txt  extract_embeddings.py  extract_inference_features.py  generate_analysis_report.py  optuna_pretrained.py  run_ablation_a_times_b.sh  run_accuracy_improvement_experiments.sh  run_attention_experiments.sh  run_attn2mix_exp.sh  run_check_label_acc.sh  run_cmt_ablation.sh  run_cmt_ablation_threshold_analysis.sh  run_cmt_experiments.sh  run_cwt_feature_experiments.sh  run_debug.sh  run_exp.sh  run_exp_CMT_2.sh  run_exp_cmt.sh  run_exp_cmt_sat.sh  run_exp_mixstyle.sh  run_exp_sat copy.sh  run_exp_sat.sh  run_exp_sat_copy.sh  run_gmm_grid_search.sh  run_mixstyle.sh  run_optuna_gmm.sh  run_quick_attention_comparison.sh  run_single_attention.sh  run_soro_exp.sh  run_test.sh  run_test_from_new_runs.sh  (+8 more)
config/: umap_visualization.yaml
tests/: README_TEST_DEVCONTAINER.md  test_devcontainer_build.sh  test_devcontainer_config.py  test_devcontainer_docs.py  test_devcontainer_guide.py  test_devcontainer_startup.sh  test_dockerignore.py  test_functional.py  test_post_create_command.py  test_resource_management.py  test_security_claude_code_access.py  test_security_host_protection.py  test_security_secrets_management.py
(+141 files in other folders)
