[project]
name = "dcase_base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==19.10b0",
    "codecarbon>=3.0.4",
    "dcase-util>=0.2.16",
    "desed>=1.3.6",
    "h5py>=3.14.0",
    "intervaltree>=2.4.0",
    "pre-commit>=2.3.0",
    "psds-eval>=0.5.3",
    "pycodestyle==2.5.0",
    "pytorch-lightning==1.9.*",
    "resampy==0.4.3",
    "sed-scores-eval>=0.0.3",
    "sox>=1.4.0",
    "soxbindings==1.2.3",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "torchaudio>=2.8.0",
    "torchmetrics>=0.10.0",
    "wandb>=0.22.3",
    "sounddevice>=0.5.1",
    "matplotlib>=3.5.0",
    "pywavelets>=1.9.0",
]
