[project]
name = "dcase_base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black==19.10b0",
    "codecarbon>=3.0.4",
    "dcase-util>=0.2.16",
    "desed>=1.3.6",
    "h5py>=3.14.0",
    "intervaltree>=2.4.0",
    "optuna>=4.6.0",
    "optuna-dashboard>=0.20.0",
    "plotly>=6.5.0",
    "pre-commit>=2.3.0",
    "psds-eval>=0.5.3",
    "pycodestyle==2.5.0",
    "pytorch-lightning==1.9.*",
    "resampy==0.4.3",
    "seaborn>=0.13.2",
    "sed-scores-eval>=0.0.3",
    "sox>=1.4.0",
    "soxbindings==1.2.3",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "thop>=0.1.1.post2209072238",
    "torchaudio>=2.8.0",
    "torchmetrics>=0.10.0",
    "wandb>=0.22.3",
]


[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D1",    # undocumented
    "D203",  # one blank line before class
    "D213",  # multi-line summary second line
    "TD001", # invalid todo tag
    "TD002", # missing todo author
    "TD003", # missing todo link
    "PD011", # pandas use of dot values
]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

logger-objects = ["src.library.logger.LOGGER"]

[tool.ruff.lint.pylint]
max-args = 6

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pandas-stubs>=2.3.3.251201",
    "ruff>=0.14.8",
    "types-setuptools>=80.9.0.20250822",
]
